--- a/lounge/lounge.css
+++ b/lounge/lounge.css
@@ -50,6 +50,8 @@ h2{
   text-align:center;
   background-image: url(images/cocktail.gif);
   background-repeat:repeat-x;
+  float: right;
+  
 
 }
 .cd{
